fix(toolbar): align toolbar actions with filtered items

--- a/src/patternfly/components/Toolbar/toolbar.scss
+++ b/src/patternfly/components/Toolbar/toolbar.scss
@@ -110,6 +110,15 @@ $pf-v6--include-toolbar-breakpoints: true !default;
   row-gap: var(--#{$toolbar}__content--RowGap);
   padding-inline-start: var(--#{$toolbar}__content--PaddingInlineStart);
   padding-inline-end: var(--#{$toolbar}__content--PaddingInlineEnd);
+
+  &.pf-m-toolbar-filtered-items {
+    display: flex;
+    align-items: baseline;
+
+    > :first-child {
+      margin-inline-end: var(--pf-t--global--spacer--md);
+    }
+  }
 }
 
 // Toolbar content section
@@ -239,7 +248,6 @@ $pf-v6--include-toolbar-breakpoints: true !default;
 
   // - Toolbar label group
   &.pf-m-label-group {
-    flex: 1;
     flex-wrap: wrap;
     column-gap: var(--#{$toolbar}__group--m-label-group--ColumnGap);
   }
